--- a/src/scss/_struct.scss
+++ b/src/scss/_struct.scss
@@ -1,5 +1,4 @@
 //structural building blocks not related to a specific section.
-
 html {
     width: 100%;
     height: 100%;
@@ -12,7 +11,6 @@ body {
     font-family: $font-stack-body;
     color: $primary-text;
     display: block;
-    background: $black;
 }
 
 #wrapper {
@@ -24,7 +22,7 @@ body {
     padding-bottom: 25px;
     width: 100%;
     height: 100%;
-    background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("../img/bg_2.jpeg") no-repeat center center scroll;
+    background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/bg_2.jpeg") no-repeat center center scroll;
     background-color: $black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -33,8 +31,28 @@ body {
     border-bottom: #fff 0.5px inset;
 }
 
-.header-section {
-    padding-top: 15px;
+.navbar {
+  background-color: #fff;
+  color: $black;
+  font-family: $font-stack-headers;
+}
+
+.navbar-brand {
+color: $black;
+font-size: 5rem;
+padding-top: 45px;
+}
+
+.navbar a {
+  color: $black;
+}
+
+.navbar-custom {
+  height: 100px;
+}
+
+.main-section {
+  padding-top: 100px;
 }
 
 .loading {
@@ -48,7 +66,6 @@ body {
     bottom: 0;
     width: 100%;
     display: block;
-
     a {
         color: #fff;
         font-size: 1.9rem;
